kudo sync configuration to prod steps

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,7 @@
 {{ title }}
-<ul>
+<!-- <ul>
   <li *ngFor="let user of users; index as i">{{user.id}} - {{user.userName}} </li>
   
-</ul>
+</ul> -->
+
+Testing NG App
